# 2025-2_dAiv-SSL-Lecture

./: .gitignore  RESNET18_MAE_sequential.ipynb  RESNET18_Rotation_sequential.ipynb  dAiv_ssl_rotation_resnet18.ipynb  pyproject.toml
